--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        <span data-node-name="greeting">Hey</span>
-        <span data-node-name="name">Lydia</span>
+        <span data-node-name="greeting">Hello</span>
+        <span data-node-name="name">Baby</span>
       </h1>
       <p class="two" data-node-name="greetingText">I really like your name btw!</p>
     </div>
@@ -46,11 +46,11 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
-      <img src="img/hat.svg" alt="" class="hat">
+      <img src="./img/sirji.jpg" alt="no photo" class="lydia-dp" data-node-name="imagePath">
+      
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h4 data-node-name="wishText">May the js.prototypes always be with you! ;)</h4>
       </div>
     </div>
     <div class="seven">
@@ -123,6 +123,29 @@
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
+    </div>
+  </div>
+
+  <div class="birthdayCard">
+    <div class="cardFront">
+      <h3 class="happy">HAPPY BIRTHDAY</h3>
+      <div class="balloons">
+        <div class="balloon-1"></div>
+        <div class="balloon-2"></div>
+        <div class="balloon-3"></div>
+        <div class="balloon-4"></div>
+      </div>
+    </div>
+    <div class="cardInside viewBox">
+      <div class="content">
+        <h3 class="back">HAPPY BIRTHDAY</h3>
+        <h5>Mere Panda</h5>
+        <h6>
+          Happy Birthday mere cutie Panda❤️ 
+          Aap hamesha meri bakbak itne pyaar se sunte ho aur mujhe samjhate ho, sir. ❤️ Aap bohot ache ho, par kabhi-kabhi thoda zyada gussa kar lete ho. Phir bhi, I love you bohot jada, dil se. 🥰 Mujhe pata hai sab kuch aacha hi hoga, sir—bas thoda aur wait aur mehnat lagegi. May you reserve all the happiness and wealth you deserve 💕
+        </h6>
+        <h5 class="name">ApkiDumbo</h5>
+      </div>
     </div>
   </div>
 </body>
