--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <h5>Mere Panda</h5>
         <h6>
           Happy Birthday mere cutie Panda❤️ 
-          Aap hamesha meri bakbak itne pyaar se sunte ho aur mujhe samjhate ho, sir. ❤️ Aap bohot ache ho, par kabhi-kabhi thoda zyada gussa kar lete ho. Phir bhi, I love you bohot jada, dil se. 🥰 Mujhe pata hai sab kuch aacha hi hoga, sir—bas thoda aur wait aur mehnat lagegi. May you reserve all the happiness and wealth you deserve 💕
+          Aap hamesha meri bakbak itne pyaar se sunte ho aur mujhe samjhate ho, sir. ❤️ Aap bohot ache ho, par kabhi-kabhi thoda zyada gussa kar lete ho. Phir bhi, I love you bohot jada, dil se. 🥰 Mujhe pata hai sab kuch aacha hi hoga, sir—bas thoda aur wait aur mehnat lagegi. May you deserve all the happiness and wealth you deserve 💕
         </h6>
         <h5 class="name">ApkiDumbo</h5>
       </div>
